# arcanum

./: .env.example  README.md  TODO.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  codspeed.yml  tests.yml
arcanum/: __init__.py  association.py  base.py  database.py  dml.py  expression.py  result.py  selectable.py  sql.py  utils.py
arcanum/materia/: README.md  __init__.py  base.py  sqlalchemy.py
arcanum/materia/redis/: README.md  __init__.py  base.py  client.py
arcanum/materia/sqlalchemy/: __init__.py  base.py  database.py  result.py
arcanus/: __init__.py
benchmark/: conftest.py  test_noop_materia.py
benchmark/noop/: test_noop_materia.py
benchmark/sqlalchemy/: conftest.py  test_sqlalchemy_materia.py
performance/: README.md  __init__.py  conftest.py  profile_noop.py  test_noop_materia.py  test_sqlalchemy_crud.py  test_sqlalchemy_materia.py
protocollum/: __init__.py  core.py
tests/: conftest.py  models.py  schemas.py  test_base_protocol.py  test_base_protocol_async.py  test_noop_materia.py  transmuters.py
tests/benchmark/: conftest.py  test_noop_materia.py  test_sqlalchemy_materia.py
tests/noop/: test_associations.py  test_base.py  test_model_construct.py  test_pydantic_features.py  test_transmuter_features.py
tests/redis/: __init__.py  conftest.py
tests/sqlalchemy/: conftest.py
tests/sqlalchemy/async/: test_async_operations.py
tests/sqlalchemy/sync/: test_model_construct.py  test_recursive.py  test_relationships.py  test_result.py  test_session.py  test_sql_operations.py  test_transmuter_orm_integration.py  test_validate_flag.py  test_validation_context.py
